--- a/src/SmallMeme/SmallMeme.csproj
+++ b/src/SmallMeme/SmallMeme.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemeValidator.cs" />
+    <Compile Include="Meme.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
